# wattpilot-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
src/wattpilot_api/: __init__.py  _version.py  auth.py  client.py  definition.py  discovery.py  exceptions.py  ha_discovery.py  models.py  mqtt.py  shell.py  utils.py
tests/: conftest.py  test_api_definition.py  test_auth.py  test_client.py  test_definition.py  test_discovery.py  test_exceptions.py  test_ha_discovery.py  test_integration.py  test_models.py  test_mqtt.py  test_shell.py  test_utils.py
